# VirtualFleet

./: .gitignore  CITATION.cff  HOW_TO_RELEASE  MANIFEST.in  README.md  argo-software-dev-evaluation.json  argo_advection.ipynb  environment-doc.yml  environment-v2.yml  environment-v3.yml  environment.yml  index.html  plot_run.ipynb  pyproject.toml  readthedocs.yml  requirements.txt  setup.cfg  setup.py  virtualargo.py  virtualargofleet.py
.github/workflows/: documentation.yml  pypi-release.yaml
binder/: apt.txt  environment.yml  postBuild  start
cli/: build-pypi
docs/: Cover.md  README.md  Usage.md  _sidebar.md  api-hidden.rst  api.rst  conf.py  cover.md  examples.md  examples.rst  index.html  index.rst  install.rst  intro.rst  old_usage.rst  requirements.txt  roadmap.md  roadmap.rst  usage.md  usage.rst  whats-new.rst  why.rst
docs/_static/pygments/: coffee.css
docs/applications/: earise.rst  index.rst  recovery.rst
docs/examples/: earise.rst  examples.rst  recovery.rst
docs/usage/: analysis.rst  execution.rst  index.rst  preparation.rst
docs_ghp/: index.html
examples/: Croco_Example.ipynb  deep6000-Antilles.ipynb  medsea_deep.ipynb  plot_run.ipynb  try_it-CustomPlans.ipynb  try_it-RealPlan.ipynb  try_it.ipynb
examples/training/: presentation.ipynb  presentation.slides.html  rise.css  traingin_session.ipynb  training_session.ipynb
schemas/: VF-ArgoFloat-Configuration.json
virtualargofleet/: __init__.py  _version.py  app_parcels.py  application_kernels.py  utilities.py  velocity_helpers.py  virtualargofleet.py
virtualargofleet/assets/: FloatConfiguration_default.json  FloatConfiguration_default_v1.json  FloatConfiguration_gulf_stream.json  FloatConfiguration_local_change.json  FloatConfiguration_local_change_v1.json  FloatConfiguration_recovery.json
