[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "setuptools_scm[toml]>=3.4",
    "setuptools_scm_git_archive",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
fallback_version = "999"
write_to = "virtualargofleet/_version_setup.py"
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"