# pyproject.toml tells “frontend” build tools like pip and build what “backend” tool to use
# to create distribution packages for your project

[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "setuptools_scm[toml]>=6.2",
    "setuptools_scm_git_archive",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
fallback_version = "999"
write_to = "virtualargofleet/_version_setup.py"

[project]
dynamic = ["version"]
name = "VirtualFleet"
license = {file = "LICENSE"}
readme = "README.md"
description = "``Virtual Fleet`` is a Python package to compute and analyse simulations of virtual Argo float trajectories."
requires-python = ">=3.8"
authors = [
  {name = "K. Balem", email = "kbalem@ifremer.fr" },
  {name = "G. Maze", email = "gmaze@ifremer.fr" }
]
maintainers = [
  {name = "K. Balem", email = "kbalem@ifremer.fr" },
  {name = "G. Maze", email = "gmaze@ifremer.fr" }
]

# Classifiers help users find your project by categorizing it.
# For a list of valid classifiers, see https://pypi.org/classifiers/
classifiers = [  # Optional
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 3 - Alpha",

  # Indicate who your project is intended for
  "Intended Audience :: Science/Research",

  # Pick your license as you wish
  "License :: OSI Approved :: Apache Software License",

  # Specify the Python versions you support here. In particular, ensure
  # that you indicate you support Python 3. These classifiers are *not*
  # checked by "pip install". See instead "python_requires" below.
  "Programming Language :: Python :: 3.8",
]