[metadata]
name = virtualfleet
author = VirtualFleet developers
author_email =
    kbalem@ifremer.fr
    gmaze@ifremer.fr
license = Apache
description = Virtual Argo float trajectories simulator
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/euroargodev/VirtualFleet
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Development Status :: 3 - Alpha

[options]
packages = find:
exclude = './binder, ./docs, ./.github, ./examples, ./local_work, ./__pycache__, ./.coveragerc'
zip_safe = False  # https://mypy.readthedocs.io/en/latest/installed_packages.html
include_package_data = True
python_requires = >=3.8

install_requires =
    numpy >= 1.18
    pandas >= 1.1
    xarray >= 0.16.0
#     parcels >= 2.3.0

[options.extras_require]
io =
    netCDF4
    h5netcdf
    scipy
    gcsfs
    numcodecs
    cftime
    cfgrib
    lz4
    python-blosc
    nomkl
    erddapy
    argopy
    gitpython

accel =
    scipy
    bottleneck
    numbagg
    distributed

viz =
    matplotlib
    seaborn
    nc-time-axis
    nbserverproxy
    jupyter
    jupyterlab>=0.35
    jupyterlab_launcher
    jupyter_client
    jupyter_server
    nb_conda_kernels
    ipykernel
    ipywidgets
    graphviz
    nodejs
    scikit-image
    scikit-learn
    watermark
    shapely
    cartopy>=0.19.0
    cmocean
    progressbar
    cgen
    pymbolic
    tqdm

complete =
    %(io)s
    %(accel)s
    %(viz)s

docs =
    %(complete)s
    sphinx-autosummary-accessors
    sphinx_rtd_theme
    sphinx_book_theme
    sphinx_issues
    ipython
    ipykernel
    jupyter-client
    nbsphinx
    scanpydoc

[flake8]
ignore =
    E203 # whitespace before ':' - doesn't work well with black
    E402 # module level import not at top of file
    E501 # line too long - let black worry about that
    E731 # do not assign a lambda expression, use a def
    W503 # line break before binary operator
exclude=
    .eggs
    docs
