[options]
packages = find_namespace:
package_dir =
    = .
include_package_data = True
exclude = './binder, ./docs, ./.github, ./examples, ./local_work, ./__pycache__, ./.coveragerc'
zip_safe = False  # https://mypy.readthedocs.io/en/latest/installed_packages.html

[options.packages.find]
where = virtualargofloat

install_requires =
    numpy >= 1.18
    pandas >= 1.1
    xarray >= 2022.12
    parcels >= 2.4.0
    zarr >= 2.13.3
    tqdm >= 4.64.1

[options.extras_require]
io =
    netCDF4
    h5netcdf
    scipy
    gcsfs
    numcodecs
    cftime
    cfgrib
    lz4
    python-blosc
    nomkl
    erddapy
    argopy
    gitpython

accel =
    scipy
    bottleneck
    numbagg
    distributed

viz =
    matplotlib
    seaborn
    nc-time-axis
    nbserverproxy
    jupyter
    jupyterlab>=0.35
    jupyterlab_launcher
    jupyter_client
    jupyter_server
    nb_conda_kernels
    ipykernel
    ipywidgets
    graphviz
    nodejs
    scikit-image
    scikit-learn
    watermark
    shapely
    cartopy>=0.19.0
    cmocean
    progressbar
    cgen
    pymbolic
    regionmask

complete =
    %(io)s
    %(accel)s
    %(viz)s

docs =
    %(complete)s
    sphinx-autosummary-accessors
    sphinx_rtd_theme
    sphinx_book_theme
    sphinx_issues
    ipython
    ipykernel
    jupyter-client
    nbsphinx
    scanpydoc

[flake8]
ignore =
    E203 # whitespace before ':' - doesn't work well with black
    E402 # module level import not at top of file
    E501 # line too long - let black worry about that
    E731 # do not assign a lambda expression, use a def
    W503 # line break before binary operator
exclude=
    .eggs
    docs
